Make sure photo animation starts and ends off screen + add randomised rotate and scale transformations

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,25 @@
-body, html {
-   margin: 0;
-   padding: 0;
-   overflow: hidden;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #container {
-   width: 100%;
-   height: 100%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .photo {
-   position: absolute;
-   top: 0;
-   width: 40vw;
-   background-color: #DDD;
-   border: 1vw solid white;
-   box-shadow: 0 0 1.5vw rgba(0,0,0,.4);
-   -moz-box-shadow: 0 0 1.5vw rgba(0,0,0,.4);
-   -webkit-box-shadow: 0 0 1.5vw rgba(0,0,0,.4);
-  }
+  position: absolute;
+  top: 0;
+  width: 40vw;
+  background-color: #ddd;
+  border: 1vw solid white;
+  box-shadow: 0 0 1.5vw rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 1.5vw rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 0 1.5vw rgba(0, 0, 0, 0.4);
+}
